Added grading to site

--- a/index.html
+++ b/index.html
@@ -151,6 +151,25 @@
           <th>12:30</th>
         </tr>
       </table>
+      <div>
+        <p>--SELF GRADE--</p>
+        <p>HEADER: A</p>
+        <p>PERSONAL INFO: A</p>
+        <p>FAVE BOOKS: A</p>
+        <p>HAIKU: A</p>
+        <p>ESSAY: A</p>
+        <p>SCHEDULE: A</p>
+        <p>--EXTRA ITEMS COMPLETED--</p>
+        <ul>
+          <li>REPEATING BKG IMG (2pts)</li>
+          <li>CHANGE FONT (2pts)</li>
+          <li>RT ALIGN PHOTO (2pts)</li>
+          <li>INDENT/CENTER HAIKU (2pts)</li>
+          <li>LINKS ONLY UNDERLINE ON HOVER (2pts)</li>
+        </ul>
+        <p>ADDITIONAL COMMENTS</p>
+        <p>A+ score because I fulfilled all requirements to a T.</p>
+      </div>
     </div>
   </body>
 </html>
